--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 jdk:
-  -openjdk11
+  - openjdk11
+  - oraclejdk11
 sudo: false
-script: mvn clean verify
+script: mvn clean verify -P run-its
