--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.example</groupId>
     <artifactId>MapreduceFramework</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>travis-ci-java</name>
     <build>
         <plugins>
             <plugin>
